turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:5: error: value ROUGE is not a member of object java.awt.Color
  setCouleur(Color.ROUGE)
                   ^DiskFour:8: error: value JAUNE is not a member of object java.awt.Color
  setCouleur(Color.JAUNE)
                   ^DiskFour:11: error: value ROSE is not a member of object java.awt.Color
  setCouleur(Color.ROSE)
                   ^