turtleart.diskfour.DiskFour.scala.code
override def run() {
  
  for (i<- 1 to 90){
  avance(100);recule(100);droite(1)}
  setCouleur(Color.ROUGE)
  for (i<- 1 to 90){
  avance(100);recule(100);droite(1)}
  setCouleur(Color.JAUNE)
  for (i<- 1 to 90){
  avance(100);recule(100);droite(1)}
  setCouleur(Color.ROSE)
}